--- a/posts.html
+++ b/posts.html
@@ -1,7 +1,33 @@
-<h1>Posty</h1>
- 
- <div ng-controller="postsCtrl">
-   <ul >
-    <li ng-repeat="post in posts"> {{ post.title.rendered}} </li>
-</ul>
+<div ng-controller="postsCtrl" layout="column" style="height:600px" ng-cloak>
+
+  <md-toolbar md-scroll-shrink ng-if="true" ng-controller="TitleController">
+    <div class="md-toolbar-tools">
+      <h3>
+        <span>Posty</span>
+      </h3>
+    </div>
+  </md-toolbar>
+
+  <md-content flex>
+
+    <md-list>
+
+      <md-list-item class="md-3-line" ng-repeat="post in posts">
+        <img ng-src="{{post.featured_media}}" alt="{{post.featured_media}}" class="md-avatar">
+
+        <div class="md-list-item-text">
+          <h3>{{post.title.rendered}}</h3>
+          <h4>{{post.title.rendered}}</h4>
+
+          <p>
+            {{post.content.rendered}}
+          </p>
+        </div>
+        <md-divider inset></md-divider>
+      </md-list-item>
+
+    </md-list>
+
+  </md-content>
+
 </div>
