--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
 </head>
 <body ng-app="travelBlogApp" ng-cloak>
- 
+ <div layout="row">
   <md-content class="md-padding">
     <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
       <md-nav-item md-nav-href="#/" name="start">Start</md-nav-item>
@@ -13,19 +13,21 @@
       <md-nav-item md-nav-href="#contact" name="contact">Kontakt</md-nav-item>  
     </md-nav-bar>
   </md-content>
- 
+ </div>
   <div ng-view></div>
   
    
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-sanitize.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
+  
   <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
  
   <script type="text/javascript">    
-    var app = angular.module("travelBlogApp", ["ngRoute", "ngMaterial"]);
+    var app = angular.module("travelBlogApp", ["ngRoute", "ngMaterial", "ngSanitize"]);
     app.config(function($routeProvider) {
         $routeProvider
         .when("/", {
@@ -35,6 +37,10 @@
             templateUrl : "posts.html",
             controller : "postsCtrl"
         })
+        .when("/post/:id", {
+            templateUrl : "post.html",
+            controller : "postCtrl"
+        })
         .when("/contact", {
             templateUrl : "contact.html",
             controller : "contactCtrl"
@@ -43,9 +49,26 @@
     app.controller('CountryCtrl', function ($scope, $http){
      
     });
-    app.controller("postsCtrl", function ($scope, $http ) {
-        $http.get('https://klaudiusz.eu/wordpress/wp-json/wp/v2/posts').success(function(data) {
-          $scope.posts = data;
+    app.controller("postsCtrl", function ($scope, $http) {
+
+       $http.get('http://klaudiusz.eu/wordpress/api/get_recent_posts/').success(function(data) {
+          $scope.posts = data.posts;
+        });
+        // $scope.posts = [];
+
+        // $http.get('https://klaudiusz.eu/wordpress/wp-json/wp/v2/posts').success(function(posts) {
+        //     angular.forEach(posts, function(data) {
+        //        $http.get('https://klaudiusz.eu/wordpress/wp-json/wp/v2/media/'+ data.featured_media).
+        //         success(function(media) {
+        //           $scope.posts.push(angular.extend(data,media));
+        //        });
+        //     });
+        // });
+     
+    });
+     app.controller("postCtrl", function ($scope, $http, $routeParams ) {
+        $http.get('https://klaudiusz.eu/wordpress/wp-json/wp/v2/posts/' + $routeParams.id).success(function(data) {
+          $scope.post = data;
         });
     });
     app.controller("contactCtrl", function ($scope) {
