--- a/post.html
+++ b/post.html
@@ -12,16 +12,15 @@
 
     <md-list>
 
-      <md-list-item class="md-3-line" ng-repeat="post in posts" ng-href="#post/{{post.id}}">
-        <img ng-src="{{post.thumbnail_images.thumbnail.url}}" alt="{{post.featured_media}}" class="md-avatar">
+      <md-list-item class="md-3-line">
+        <img ng-src="{{thumbnail.media_details.sizes.thumbnail.source_url}}" alt="{{post.featured_media}}" class="md-avatar">
 
         <div class="md-list-item-text">
-         
-          <h3>{{post.title}}</h3>
-          <h4>{{post.date}}</h4>
+          <h3>{{post.title.rendered}}</h3>
+          <h4>{{post.title.rendered}}</h4>
 
-          <p ng-bind-html="post.excerpt">
-           
+          <p>
+            {{post.content.rendered}}
           </p>
         </div>
         <md-divider inset></md-divider>
