Zmieniono nazwy stron z "postów" na "miejsca". Dodano lewy sidebar, belkę z wyszukiwaniem na stronie z miejscami, stronę notatek, menu kontekstowe na stronie notatek, stronę "osoby"

--- a/users.html
+++ b/users.html
@@ -1,4 +1,4 @@
-  <div ng-controller="contactCtrl">
+  <div ng-controller="usersCtrl">
       
       <md-toolbar>
         <div class="md-toolbar-tools">
@@ -6,7 +6,7 @@
             <ng-md-icon icon="menu"></ng-md-icon>
           </md-button>
           <h3>
-            Kontakt
+            Osoby
           </h3>
           <span flex></span>
           
