--- a/place.html
+++ b/place.html
@@ -1,9 +1,9 @@
-<div ng-controller="postsCtrl" layout="column" style="height:600px" ng-cloak>
+<div ng-controller="placesCtrl" layout="column" style="height:600px" ng-cloak>
 
   <md-toolbar md-scroll-shrink ng-if="true" ng-controller="TitleController">
     <div class="md-toolbar-tools">
       <h3>
-        <span>Posty</span>
+        <span>Miejsce</span>
       </h3>
     </div>
   </md-toolbar>
@@ -13,14 +13,14 @@
     <md-list>
 
       <md-list-item class="md-3-line">
-        <img ng-src="{{thumbnail.media_details.sizes.thumbnail.source_url}}" alt="{{post.featured_media}}" class="md-avatar">
+        <img ng-src="{{thumbnail.media_details.sizes.thumbnail.source_url}}" alt="{{place.featured_media}}" class="md-avatar">
 
         <div class="md-list-item-text">
-          <h3>{{post.title.rendered}}</h3>
-          <h4>{{post.title.rendered}}</h4>
+          <h3>{{place.title.rendered}}</h3>
+          <h4>{{place.title.rendered}}</h4>
 
           <p>
-            {{post.content.rendered}}
+            {{place.content.rendered}}
           </p>
         </div>
         <md-divider inset></md-divider>
